# docent

./: .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bunfig.toml  docent.config.ts  firebase.json  package-lock.json  package.json  pyproject.toml  remotion.config.ts  tsconfig.json
analysis/: bun-pr.md  bun.md  codex.md  depth-review-architecture.md  depth-review-pr.md  euclid-primes.md  euclid-primes.source.md  kubernetes-pr.md  kubernetes.md  linear-algebra.md  nono-codex.md  nono-pr.md  nono.md  rig-pr.md  rig.md  stopping-by-woods.md  stopping-by-woods.source.md  vector-pr.md  vector.md  wwi-causes.md  wwi-causes.source.md
docs/: archetype-and-variant.md  ci-dogfood-gate.md  distribution.md  extension-points-tutorial.md  grammar.md  the-format.md  translation-smoke.md  translation.md  treatment-flow.md
dogfood/: log.md
films/: ai-agent-stack.json  ai-lab-race.json  arxiv-2512-14806.json  auth-overlap.json  brand-pack-tutorial.json  bun.json  causal-loop-primer.json  codex.json  docent-landscape.json  docent-self.json  euclid-primes.json  grammar-check.json  kubernetes-pr.json  lethal-trifecta-blog.json  linear-algebra.json  multi-region-db.json  nono-codex.json  nono.json  onboarding-first-30-minutes.json  openclaw-ar.json  prior-art-primer.json  rhetorical-primer.json  sprint-b-composition-demo.json  stopping-by-woods.json  text-stress-diagrammatic.json  text-stress-narrative.json  thermostat.json  wwi-causes.json
hermetic/: fixtures.json
landing/: README.md  package.json  svelte.config.js
pipeline/: build.ts  tts.py  (+1 more)
(+214 files in other folders)
