[project]
name = "archcast"
version = "0.1.0"
description = "Turn any codebase into an animated, voiced-over architecture review."
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19",
    "manim-voiceover>=0.3",
    "kokoro>=0.8",
    "soundfile>=0.12",
    "numpy>=1.26",
    "setuptools<81",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archcast"]
